--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -101,3 +101,13 @@ input[type='number'] {
 .c-cSwjHS.c-lbNOYO ~.c-cSwjHS.c-lbNOYO{
   display: none;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
