--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -22,7 +22,7 @@ body {
 }
 
 .btn-secondary {
-  @apply disabled:opacity-50 focus:outline-none dark:hover:bg-pink-500 hover:bg-pink-100 outline hover:text-pink-500 outline-pink-600 text-pink-600;
+  @apply disabled:opacity-50 rounded border border-pink-500 focus:outline-none dark:hover:bg-pink-100 hover:bg-pink-100 hover:text-pink-500  text-pink-600;
 }
 
 .text-secondary {
