--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://static.lenstube.xyz/fonts/font.css');
+@import url('https://static.lenstik.xyz/fonts/font.css');
 
 @tailwind base;
 @tailwind components;
