--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'sofia-pro', sans-serif;
+  font-family: 'roboto', sans-serif;
   @apply antialiased dark:text-white bg-white bg-fixed dark:bg-neutral-900 text-black min-h-screen;
 }
 
