--- a/apps/embed/src/styles/index.css
+++ b/apps/embed/src/styles/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Inter:600,700,500,300,400,800');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: 'Inter', ui-sans-serif;
+  font-family: 'Inter var', ui-sans-serif;
   @apply min-h-screen bg-white antialiased;
 }
