--- a/apps/embed/src/styles/index.css
+++ b/apps/embed/src/styles/index.css
@@ -5,6 +5,6 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Inter', ui-sans-serif;
+  font-family: 'Inter var', 'Segoe UI', ui-sans-serif;
   @apply min-h-screen bg-white antialiased;
 }
