--- a/apps/embed/src/styles/index.css
+++ b/apps/embed/src/styles/index.css
@@ -5,6 +5,6 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Inter var', 'Segoe UI', ui-sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   @apply min-h-screen bg-white antialiased;
 }
