--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Inter var', 'Segoe UI', ui-sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   @apply antialiased dark:text-white bg-white bg-fixed dark:bg-neutral-900 text-black min-h-screen;
 }
 
